backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conduit-backend-deployment
spec:
  selector:
    matchLabels:
      app: conduit
      tier: backend
  replicas: 3
  # refers to the pod
  template:
    metadata:
      labels:
        app: conduit
        tier: backend
    spec:
      containers:
        - name: conduit-backend
          image: conduit-express-backend
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          ports:
            - containerPort: 3000
