db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conduit-db-deployment
spec:
  selector:
    matchLabels:
      app: conduit
      tier: db
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  # refers to the pod
  template:
    metadata:
      labels:
        app: conduit
        tier: db
    spec:
      containers:
      - name: conduit-db
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: conduit-db-volume
      volumes:
      - name: conduit-db-volume
        persistentVolumeClaim:
          claimName: conduit-db-pv-claim
