backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit-backend-service
spec:
  selector:
    app: conduit
    tier: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
