db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit-db-service
spec:
  selector:
    app: conduit
    tier: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
