frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit-frontend-service
spec:
  selector:
    app: conduit
    tier: frontend
  ports:
    - protocol: TCP
      port: 4100
      targetPort: 4100
